# ray_tracer

./: .gitignore  Cargo.toml  README.md  state.json  state.json.template  world.json
src/: camera.rs  main.rs  renderer.rs  state.rs  tests.rs  utils.rs
src/hittable/: hittable_list.rs  mod.rs  sphere.rs  world.rs
src/material/: mod.rs
src/ray/: functions.rs  mod.rs
src/vec3/: functions.rs  mod.rs  utils.rs
