[package]
authors = ["Degra"]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_inv_sqrt = { version = "1.0.1", features = ["omit-checking"] }
image-convert = "0.15.0"
indicatif = "0.17.3"
rand = "0.8.5"
rayon = "1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
palette = "0.6.0"
image = "0.13.0"
serde_as = "0.0.1"
serde_with = "2.3.1"
